grid ui completed

--- a/grid.css
+++ b/grid.css
@@ -2,8 +2,8 @@ body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
 	font-size: 1.6em;
-	background: #f5f5f5;
-	color: #4d4d4d;
+	/*background: #f5f5f5;*/
+	/*color: #4d4d4d;*/
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 300;
@@ -16,38 +16,31 @@ button {background: none;}
 .wrapper{
 	margin: 20px 0 ;
 }
+.tube20y{padding: 20px 0;}
 /*.container{width: 1600px;}*/
-.gridtable{
-	background: #FFFFFF;
-	position: relative;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
-}
-.gridtable .row{border-bottom: 1px solid #EEEEEE;margin:0;}
-.gridtable .row > [class*='col-']{padding:0;}
-.gridtable .datacell{border: 1px solid transparent;height: 65px;}
-.gridtable .cursorrow .datacell{background: #FAFBFC;}
-/*.gridtable .datacell:hover{background: #F9FAFC;border:1px dashed #00b9e6;background-color: #ebf7ff;}*/
-.gridtable .datacell.cursor{border:1px dashed #00b9e6 !important;background-color: #ebf7ff !important;}
-.gridtable .datacell.editing{border: 1px solid #1ed004 !important;background-color: #d3ffd7 !important;}
-.gridtable .datatext{padding:10px 10px;height: 100%;text-overflow: clip;overflow: hidden;/*white-space: nowrap;*/}
-.gridtable .datatext.empty{font-size: 0.9em;color:#CCCCCC;font-style: italic;}
-/*.gridtable .dataedit{display: none;}*/
-.gridtable .dataedit input{width: 100%;border:0;background: transparent;padding:10px;}
+.gridtable .grid-header{padding: 20px 10px;overflow: hidden;}
+.datagrid{position: relative;}
+.datagrid .row{margin:0;}
+.datagrid .row > [class*='col-']{padding:0;}
+.datagrid .datacell{border: 1px solid transparent;height: 65px;}
+.datagrid .cursorrow .datacell{background: #FAFBFC;}
+/*.datagrid .datacell:hover{background: #F9FAFC;border:1px dashed #00b9e6;background-color: #ebf7ff;}*/
+.datagrid .datacell.cursor{border:1px dashed #00b9e6 !important;background-color: #ebf7ff !important;}
+.datagrid .datacell.editing{border: 1px solid #1ed004 !important;background-color: #d3ffd7 !important;}
+.datagrid .datatext{padding:10px 10px;height: 100%;text-overflow: clip;overflow: hidden;/*white-space: nowrap;*/}
+.datagrid .datatext.empty{font-size: 0.9em;color:#CCCCCC;font-style: italic;}
+/*.datagrid .dataedit{display: none;}*/
+.datagrid .dataedit input{width: 100%;border:0;background: transparent;padding:10px;}
 
-.gridtable .addrow .row {border:0;padding:0;margin:0;}
-.gridtable .addrow .datacell{background: #F9FAFC;height: auto;}
-.gridtable .addrow .datatext{padding:15px 10px;font-weight: }
-.gridtable .addrow .dataedit{padding: 5px 10px 10px;}
-.gridtable .addrow label{color:#739bb2; font-weight: normal; font-size: .95em;margin:0;padding:0 5px;display: block;}
-.gridtable .addrow .dataedit input {padding:5px 5px;background-color: rgba(165, 222, 255, 0.1)}
-.gridtable .addrow .dataedit input:focus {background-color: rgba(165, 222, 255, 0.3)}
+.datagrid .addrow .row {border:0;padding:0;margin:0;}
+.datagrid .addrow .datacell{background: #F9FAFC;height: auto;}
+.datagrid .addrow .datatext{padding:15px 10px;font-weight: }
+.datagrid .addrow .dataedit{padding: 5px 10px 10px;}
+.datagrid .addrow label{color:#739bb2; font-weight: normal; font-size: .95em;margin:0;padding:0 5px;display: block;}
+.datagrid .addrow .dataedit input {padding:10px 5px;background-color: rgba(165, 222, 255, 0.1)}
+.datagrid .addrow .dataedit input:focus {background-color: rgba(165, 222, 255, 0.3);}
 /*.datacell.editing .datatext{display: none;}*/
 /*.datacell.editing .dataedit{display: block;}*/
-
-.gridtable .new-row{
-	font-size: 2em;line-height: 1em;
-	padding: 10px;
-	border: none;
-	width:100%;
-	background: rgba(0, 0, 0, 0.01);
-}
+.datagrid .datacell{border-top-color:#EEEEEE;border-right-color:#EEEEEE}
+.datagrid .row .datacell:first-child{border-left-color:#EEEEEE;}
+.datagrid .row:last-child .datacell{border-bottom-color:#EEEEEE;}
