--- a/grid.css
+++ b/grid.css
@@ -26,7 +26,7 @@ button {background: none;}
 .datagrid .cursorrow .datacell{background: #FAFBFC;}
 /*.datagrid .datacell:hover{background: #F9FAFC;border:1px dashed #00b9e6;background-color: #ebf7ff;}*/
 .datagrid .datacell.cursor{border:1px dashed #00b9e6 !important;background-color: #ebf7ff !important;}
-.datagrid .datacell.editing{border: 1px solid #1ed004 !important;background-color: #d3ffd7 !important;}
+.datagrid .datacell.editing{border: 1px dashed #1ed004 !important;background-color: #d3ffd7 !important;}
 .datagrid .datatext{padding:10px 10px;height: 100%;text-overflow: clip;overflow: hidden;/*white-space: nowrap;*/}
 .datagrid .datatext.empty{font-size: 0.9em;color:#CCCCCC;font-style: italic;}
 /*.datagrid .dataedit{display: none;}*/
